# nportvalidation

./: .gitignore  OVERVIEW.md  README.md  pyproject.toml  tech_spec.txt
docs/: how_it_works.md  sql_migration.md
output/: ACLZ_2026-06.xml  ACMM_2026-06.xml  AV_2026-06.xml  BAY_2026-06.xml  BLCK_2026-06.xml  BREW_2026-06.xml  BRZX_2026-06.xml  BZZ_2026-06.xml  CAMC_2026-06.xml  CARX_2026-06.xml  CBIL_2026-06.xml  CBOT_2026-06.xml  CCPX_2026-06.xml  CGOV_2026-06.xml  CHYG_2026-06.xml  CIEI_2026-06.xml  CIVG_2026-06.xml  CJUN_2026-06.xml  CMAG_2026-06.xml  CMAY_2026-06.xml  CQTM_2026-06.xml  CRUC_2026-06.xml  CTJN_2026-06.xml  CTMA_2026-06.xml  CUST_2026-06.xml  DIPR_2026-06.xml  DOCK_2026-06.xml  EMJN_2026-06.xml  EMMY_2026-06.xml  EMXX_2026-06.xml  EUVX_2026-06.xml  EUV_2026-06.xml  EYES_2026-06.xml  FDRS_2026-06.xml  FDRX_2026-06.xml  GASZ_2026-06.xml  GLAM_2026-06.xml  GNMX_2026-06.xml  HJUN_2026-06.xml  HMAY_2026-06.xml  (+64 more)
scripts/: apply_bloomberg_series_lei.py  backfill_series_ids.py  build_security_masters.py  desynthesize.py  populate_test_filings.py  repair_cusips.py  verify_output.py  verify_series_ids.py
tests/: conftest.py  test_ap_orders.py  test_bloomberg.py  test_builder.py  test_builder_extended.py  test_cli.py  test_config.py  test_cusip.py  test_custodian.py  test_data_loader.py  test_eaglestar.py  test_edgar.py  test_filing_master.py  test_fund_dirs.py  test_input_validation.py  test_master_sheet.py  test_multitype_fund.py  test_roundtrip.py  test_schema.py  test_schema_check.py  test_security_master.py  test_split_csv.py  test_validation_extended.py  (+1 more)
(+554 files in other folders)
